# Bioacoustic-Frog-Detection

./: .gitignore  Makefile  README.md  data_preparation.py  pyproject.toml
configs/: base.yaml  best_params.yaml  eval.yaml  features.yaml  infer.yaml  preprocess.yaml  train.yaml  tune.yaml
models/: frog_call_classifier.h5  frog_call_classifier_v0_1.h5  frog_call_classifier_v0_2.h5  frog_call_classifier_v0_3.h5  frog_call_classifier_v0_4.h5  frog_call_classifier_v0_4.keras  frog_call_classifier_v1.h5  frog_call_classifier_v1_1.h5  frog_call_classifier_v1_2.h5
old_src/: 01_preprocessing.py  05_evaluation.py  06_analy_frog_count.py  inference.py
scripts/: evaluate.py  infer.py  make_embeddings.py  preprocess.py  train.py  tune.py
src/: 00_data_checker.py  01_preprocessing.py  02_data_prep.py  02_data_prep_AST.py  02_data_prep_AST_batchp.py  03_2_train.py  03_train.py  03_train_Optuna_allgm.py  03_train_Optuna_pres_call.py  03_train_Optuna_pres_call_v2_0.py  04_Pseudo_Labeling.py  04_Pseudo_Labeling_AST.py  05_evaluation.py  05_evaluation_AST.py  06_analy_frog_count.py
src/bioacoustic_frog_detection/: config.py
src/bioacoustic_frog_detection/eval/: on_embeddings.py
